[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://addons/shared/menu/Menu.gd" type="Script" id=2]

[node name="MainMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 465.0
margin_top = 266.0
margin_right = 559.0
margin_bottom = 334.0
script = ExtResource( 2 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 94.0
margin_bottom = 20.0
text = "START_GAME"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 94.0
margin_bottom = 44.0
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 68.0
text = "EXIT_GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
